--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,13 @@ hr {
 }
 
 @media only screen and (max-width: 800px) {
+  iframe {
+    width: 600px;
+  }
   main {
     width: auto;
+  }
+  section > p {
+    margin: 0 10px 0 10px;
   }
 }
